# CVS_A2A_Sample

./: .gitignore
a2a-adk-app/: main.py  pyproject.toml
a2a-adk-app/drift_agent/: .env  __init__.py  __main__.py  adk_agent.py  adk_agent_executor.py  drift_server.py  drift_tool.py
a2a-adk-app/host_agent/: .gitignore  app.py  host_langchain_agent.py  host_tools.py
a2a-adk-app/host_agent/adk_agent/: .env  .env.example  README.md  agent.py  remote_agent_connection.py
a2a-adk-app/monitor_agent/: __init__.py  __main__.py  adk_agent.py  adk_agent_executor.py  monitor_server.py  monitor_tool.py
a2a-adk-app/scheduler_agent/: __init__.py  __main__.py  adk_agent.py  adk_agent_executor.py  scheduler_server.py  scheduler_tool.py
weather_agent/: .env.example
